# N64-Gamecat-Pico

./: CMakeLists.txt  README.md  blink copy.pio  blink.pio  main.c  n64_pi_task.c  n64_pi_task.h
n64_pi/: CMakeLists.txt  n64_pi.pio  n64_pi.pio.bak  n64_pi_cart.pio  n64_pi_console.pio
n64_pi/include/: n64_pi.h
